--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "joa",
   "license": "ISC",
   "dependencies": {
+    "clipboard-copy": "^4.0.1",
     "nanoid": "^4.0.1"
   },
   "type": "module"
